[gd_scene load_steps=6 format=3 uid="uid://bnd8bdilrpw2h"]

[ext_resource type="Script" path="res://Main.gd" id="1_tij3b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Background"]
bg_color = Color(1, 1, 1, 0.98)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.909, 0.447, 0.271, 0.2)
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.909, 0.447, 0.271, 0.1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ButtonHover"]
bg_color = Color(0.949, 0.557, 0.371, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.3)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.909, 0.447, 0.271, 0.3)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ButtonPressed"]
bg_color = Color(0.769, 0.349, 0.184, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ButtonNormal"]
bg_color = Color(0.909, 0.447, 0.271, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.909, 0.447, 0.271, 0.2)
shadow_size = 5

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tij3b")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_Background")

[node name="CenterContainer" type="CenterContainer" parent="Background"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Title" type="Label" parent="Background/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.909, 0.447, 0.271, 1)
theme_override_font_sizes/font_size = 56
text = "TIC TAC TOE"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ButtonContainer" type="VBoxContainer" parent="Background/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_constants/separation = 15

[node name="PVP" type="Button" parent="Background/CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.9)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_ButtonNormal")
text = "PLAYER VS PLAYER"

[node name="PVC" type="Button" parent="Background/CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.9)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_ButtonNormal")
text = "PLAYER VS COMPUTER"

[node name="PVAI" type="Button" parent="Background/CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.9)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_ButtonNormal")
text = "CHALLENGE MODE"

[node name="Exit" type="Button" parent="Background/CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.9)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_ButtonNormal")
text = "EXIT"

[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/ButtonContainer/PVP" to="." method="_on_pvp_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/ButtonContainer/PVC" to="." method="_on_pvc_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/ButtonContainer/PVAI" to="." method="_on_pvai_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/ButtonContainer/Exit" to="." method="_on_exit_pressed"]
